# LibNovasCpp

./: .gitignore  README.md
LibNovasCpp/: CMakeLists.txt
LibNovasCpp/CMakeLibsConfig/: ConfigLibDegorasSLR.cmake  ConfigLibNovasCpp.cmake
LibNovasCpp/CMakeModules/: CMakeMacros.cmake  CMakeMacrosGlobals.cmake  CMakeMacrosInit.cmake  CMakeMacrosInstall.cmake  CMakeMacrosLauncher.cmake  CMakeMacrosLibraries.cmake  CMakeMacrosProjects.cmake  CMakeMacrosUtils.cmake  ConfigLibNovasCpp.cmake
LibNovasCpp/examples/: CMakeLists.txt  Example_ContinuousStarCalculations.cpp  Example_GenericCalculations.cpp  Example_SimpleStarCalculations.cpp  Example_SimpleStarCalculations_BugSearch.cpp  Test_ErfaRefCo.cpp
LibNovasCpp/includes/LibNovasCpp/: eph_manager.h  libnovascpp_global.h  novas.h  novascon.h  novascpp.h  nutation.h  solarsystem.h
LibNovasCpp/sources/: eph_manager.c  novas.c  novascon.c  nutation.c
LibNovasCpp/sources/solsys/: solsys1.c  solsys2.c  solsys3.c
LibNovasCpp/utilities/: CMakeLists.txt
LibNovasCpp/utilities/GenerateStarAzEl/: StarList.ini  Util_GenerateStarAzEl.cpp
LibNovasCpp/utilities/GenerateStarAzEl/auxiliar/: FK6_699_[alpha Lyr]_20231102_1800.starpos
